WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129524
Web Inspector: debugger statements do not break
https://bugs.webkit.org/show_bug.cgi?id=129524
Summary
Web Inspector: debugger statements do not break
Jonathan Wells
Reported
2014-02-28 17:34:10 PST
Created
attachment 225512
[details]
Web archive to reproduce the breakpoint bug. Breakpoints do not seem to work. `debugger;` statements are skipped entirely. Breakpoints inserted in the inspector pretty print editor will not break the execution in WebKit
r164860
. To reproduce for the debugger statement: 1. Open the attached breakpoint.webarchive 2. Open the web inspector 3. In the console, call: foo(). No breaking will occur. To reproduce manually: 1. Open the attached breakpoint.webarchive 2. Open the web inspector 3. Click on Resources and open main.js 4. Add a breakpoint inside foo() on line 3 (the variable assignment) 5. Refresh the page.
Attachments
Web archive to reproduce the breakpoint bug.
(1.62 KB, application/x-webarchive)
2014-02-28 17:34 PST
,
Jonathan Wells
no flags
Details
debugger statement test case
(290 bytes, application/x-gzip)
2014-03-03 12:00 PST
,
Mark Lam
no flags
Details
the patch: now supporting debugger statements.
(9.84 KB, patch)
2014-03-03 12:15 PST
,
Mark Lam
mark.lam
: review-
Details
Formatted Diff
Diff
patch 2
(7.31 KB, patch)
2014-03-03 13:01 PST
,
Mark Lam
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-02-28 17:34:42 PST
<
rdar://problem/16202928
>
Mark Lam
Comment 2
2014-03-03 12:00:35 PST
Created
attachment 225678
[details]
debugger statement test case The previously attached test case has a bug where the function containing the debugger statement was never called. Here's a new one.
Mark Lam
Comment 3
2014-03-03 12:15:16 PST
Created
attachment 225681
[details]
the patch: now supporting debugger statements.
Mark Lam
Comment 4
2014-03-03 12:26:18 PST
Comment on
attachment 225681
[details]
the patch: now supporting debugger statements. This patch causes many unexpected inspector regressions. Looking into it.
Mark Lam
Comment 5
2014-03-03 13:01:28 PST
Created
attachment 225685
[details]
patch 2 The previous patch has a union - struct tree that is a little too complex. The result is that the compiler ended up expressing the outermost union as a struct instead. In patch2, I flattened the union to only contain an unsigned and a struct. With this, the inspector tests are passing again.
Geoffrey Garen
Comment 6
2014-03-03 13:56:56 PST
Comment on
attachment 225685
[details]
patch 2 r=me
Mark Lam
Comment 7
2014-03-03 14:07:55 PST
Thanks. Landed in
r165008
: <
http://trac.webkit.org/r165008
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug