Web Inspector: debugger statements do not break. <https://webkit.org/b/129524>

Reviewed by Geoff Garen.

Source/JavaScriptCore:

Since we no longer call op_debug hooks unless there is a debugger request
made on the CodeBlock, the op_debug for the debugger statement never gets
serviced.

With this fix, we check in the CodeBlock constructor if any debugger
statements are present.  If so, we set a m_hasDebuggerStatement flag that
causes the CodeBlock to show as having debugger requests.  Hence,
breaking at debugger statements is now restored.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::CodeBlock):
* bytecode/CodeBlock.h:
(JSC::CodeBlock::hasDebuggerRequests):
(JSC::CodeBlock::clearDebuggerRequests):

LayoutTests:

* inspector-protocol/debugger/debugger-statement-expected.txt: Added.
* inspector-protocol/debugger/debugger-statement.html: Added.
* inspector-protocol/debugger/resources/breakpoint.js:
(debuggerStatement):



Canonical link: https://commits.webkit.org/147678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165008 268f45cc-cd09-0410-ab3c-d52691b4dbfc